--- a/src/styles.css
+++ b/src/styles.css
@@ -3,7 +3,7 @@
 }
 
 body {
-  background-color: black;
+  background-color: rgb(0, 0, 0);
   font-family: sans-serif;
   margin: 20px;
   padding: 0;
