--- a/src/styles.css
+++ b/src/styles.css
@@ -12,6 +12,7 @@ body {
 h1 {
   margin-top: 0;
   font-size: 22px;
+  color: aliceblue;
 }
 
 h2 {
@@ -55,6 +56,7 @@ body {
   font-family: sans-serif;
   margin: 20px;
   padding: 0;
+  color: aliceblue;
 }
 
 .square {
