--- a/src/styles.css
+++ b/src/styles.css
@@ -1,58 +1,17 @@
 * {
   box-sizing: border-box;
 }
-
-body {
-  background-color: rgb(0, 0, 0);
-  font-family: sans-serif;
-  margin: 20px;
-  padding: 0;
-}
-
 h1 {
-  margin-top: 0;
-  font-size: 22px;
+  font-weight: 300;
+  font-size: 50px;
   color: aliceblue;
 }
 
-h2 {
-  margin-top: 0;
-  font-size: 20px;
-}
-
-h3 {
-  margin-top: 0;
-  font-size: 18px;
-}
-
-h4 {
-  margin-top: 0;
-  font-size: 16px;
-}
-
-h5 {
-  margin-top: 0;
-  font-size: 14px;
-}
-
-h6 {
-  margin-top: 0;
-  font-size: 12px;
-}
-
-code {
-  font-size: 1.2em;
-}
-
-ul {
-  padding-left: 20px;
-}
-
-* {
-  box-sizing: border-box;
-}
-
 body {
+  background-color: black;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   font-family: sans-serif;
   margin: 20px;
   padding: 0;
@@ -63,15 +22,15 @@ body {
   background: rgba(0, 0, 0, 0.881);
   border: 1px solid #ed040495;
   float: left;
-  font-size: 24px;
+  font-size: 50px;
   font-weight: bold;
   line-height: 34px;
-  height: 34px;
+  height: 100px;
   margin-right: -1px;
   margin-top: -1px;
   padding: 0;
   text-align: center;
-  width: 34px;
+  width: 100px;
   color: aliceblue;
 }
 
@@ -82,7 +41,10 @@ body {
 }
 
 .status {
-  margin-bottom: 10px;
+  font-weight: 400;
+  font-size: 25px;
+  margin-bottom: 20px;
+  margin-top: 4em;
 }
 .game {
   display: flex;
@@ -90,5 +52,31 @@ body {
 }
 
 .game-info {
-  margin-left: 20px;
+  margin-top: 13rem;
+  margin-left: 60px;
 }
+
+.move  {
+  font-weight: 400;
+  font-size: 25px;
+  background-color: black;
+  color: red;
+}
+li button{
+  font-weight: 600;
+  font-size: 15px;
+  color: rgb(252, 0, 0);
+  background-color: rgba(0, 0, 0, 0.886);
+  cursor: pointer ;
+  border-style: none;
+  text-decoration: underline;
+}
+li button:hover {
+  text-decoration: none;
+  
+}
+
+
+
+
+
