--- a/src/styles.css
+++ b/src/styles.css
@@ -76,6 +76,44 @@ li button:hover {
   
 }
 
+@media only screen and (max-width: 600px){
+
+h1{
+  font-size: 25px;
+}
+.square{
+  background: rgba(0, 0, 0, 0.881);
+  border: 1px solid #ed040495;
+  float: left;
+  font-size: 25px;
+  font-weight: bold;
+  line-height: 34px;
+  height: 50px;
+  margin-right: -1px;
+  margin-top: -1px;
+  padding: 0;
+  text-align: center;
+  width: 50px;
+  color: aliceblue;
+}
+.status{
+  font-weight: 200;
+  font-size: 15px;
+}
+.game-info {
+  margin-top: 7rem;
+  margin-left: 30px;
+}
+.move  {
+  font-weight: 200;
+  font-size: 15px;
+}
+li button{
+  font-weight: 300;
+  font-size: 10px;
+ 
+}
+}
 
 
 
